<resources>
    <string name="app_name">Movetto</string>
    <string name="get_started">Get Started</string>
    <string name="continued">Continue</string>
    <string name="movetto">Movetto</string>
    <string name="movetto_shape_logo">movetto logo shape</string>
    <string name="movetto_text_logo">movetto logo text</string>
    <string name="bienvenido_a_movetto">Welcome to MOVETTO</string>
    <string name="introduce_tu_email">"  Introduce tu email"</string>
    <string name="reg_strate_o_inicia_sesi_n_con_tu_email">Sign Up or Sign In</string>
    <string name="si_continuas_aceptar_s_nuestra_pol_tica_de_privacidad_y_las_condiciones_de_uso_general">If continue , you accept  our Privacy Policy and Use Terms and Conditions</string>
    <string name="introduce_un_email_v_lido">Introduce un email válido</string>
    <string name="todo">TODO</string>
    <string name="revisar_politica_privacidad">Review Privacy Policy</string>
    <string name="email_validate_ko">Email Incorrect</string>
    <string name="revisar_terminos_condiciones">Terms and Conditions</string>
    <string name="inicio_sesion_email">Sign in with Email</string>
    <string name="inicio_sesion_google">Sign in with Google</string>
    <string name="cerrar_sesion">Close Session</string>
    <string name="session_closed">Session Closed</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account">Account</string>
    <string name="my_account">My Account</string>
    <string name="travel">Travels</string>
    <string name="travellers">Travels Available</string>
    <string name="shipments">Shipments</string>
    <string name="shipments_available">Shipments Available</string>
    <string name="balance">Balance</string>
    <string name="wallet">Wallet</string>
    <string name="attachment_title">Automatically download attachments for incoming emails</string>
    <string name="news">News</string>
    <string name="shipment_list">Shipment List</string>
    <string name="new_shipment">New Shipment</string>
    <string name="shipment_subtitle_empty">Currently you do not have any shipment, press the Continue button to create one, or Later to Exit.</string>
    <string name="shipment_land_image_description">Shipment Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="travels">My Travels</string>
    <string name="travel_subtitle">Currently you do not have any travel, press the Continue button to create one, or Later to Exit.</string>
    <string name="new_travel">New Travel</string>
    <string name="travel_list">Travel List</string>
    <string name="package_land_image_description">Package Image</string>
    <string name="package_subtitle">In this section, you can display and view the status of all available packages</string>
    <string name="package_list">Packages List</string>
    <string name="traveller_land_image_description">Traveller Image</string>
    <string name="traveller_subtitle">In this section, you can display and view the status of all available travellers</string>
    <string name="traveller_list">Traveller List</string>
    <string name="account_subtitle">In this section, you can display and edit your account data</string>
    <string name="account_manage_customer">Customer Account</string>
    <string name="account_manage_partner">Partner Account</string>
    <string name="Update">Update</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="telephone">Telephone:</string>
    <string name="account_customer_image_description">Customer Image</string>
    <string name="Street">Street:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="country">Country:</string>
    <string name="social_security_number">SSN:</string>
    <string name="later">Later</string>
    <string name="sign_up_customer">Sign Up Customer</string>
    <string name="account_customer_empty_subtitle">" We have verified that you do not have a customer account, in order to use our services, you must register or, if you prefer, you can leave it for later."</string>
    <string name="account_partner_empty_subtitle">" We have verified that you do not have a member account, in order to perform services, you must register or, if you prefer, you can leave it for later."</string>
    <string name="sign_up_partner">Sign Up Partner</string>
    <string name="account_customer_register">Customer Register</string>
    <string name="account_partner_image_description">Partner Image</string>
    <string name="account_partner_register">Partner Register</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="description">Description:</string>
    <string name="account_register">" Here you can register your data"</string>
    <string name="account_update">" Here you can update your data "</string>
    <string name="register_ko_customer">" We had a problem when registering as a Client, click continue to start again."</string>
    <string name="register_ko_partner">" We have had a problem when registering as a Partner, click continue to start again."</string>
    <string name="register_ok_customer">" Thank you for registering as a Customer, now you can request Travel and Shipping."</string>
    <string name="register_ok_partner">" Thank you for registering as a Partner, now you can make trips and shipments"</string>
    <string name="registration">Registration:</string>
    <string name="type">Type:</string>
    <string name="vehicle_register">Vehicle Register</string>
    <string name="vehicle_register_subtitle">" Here you can register your vehicle"</string>
    <string name="direccion">direccion</string>
    <string name="vehiculos">vehicles</string>
    <string name="data">My Data</string>
    <string name="pick_up_address">Pick Up Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="shipment_image_description">Shipment Image</string>
    <string name="shipment_subtitle_start">Address where we will collect the shipment</string>
    <string name="shipment_subtitle_end">" Address where we will deliver the shipment"</string>
    <string name="shipment_package_title">Package Data</string>
    <string name="shipment_package_subtitle">Enter the package details</string>
    <string name="width">Width:</string>
    <string name="lenght">Lenght:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="enter_value_cm">Enter Value in cm.</string>
    <string name="enter_value_kg">Enter Value in kg</string>
    <string name="shipment_management">Here you can manage your shipments</string>
    <string name="san_sebastian_de_los_reyes">San Sebastian de los Reyes</string>
    <string name="valencia">Valencia</string>
    <string name="xx">XX</string>
    <string name="wallet_subtitle">In order to use our services, you must have a balance in your wallet, to make an income, press the \"Deposit\" button, you can also leave it for later.</string>
    <string name="deposit">Deposit</string>
    <string name="travel_subtitle_start">" Address where we will pick you up"</string>
    <string name="destination_address">Destination Address</string>
    <string name="travel_subtitle_end">"Address where we will take you "</string>
    <string name="travel_management">Here you can manage your travels</string>
</resources>
