<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shipments"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/shipments" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_local_taxi_black_24dp"
            android:title="@string/travel" />
        <item
            android:id="@+id/nav_packages"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/packages" />
        <item
            android:id="@+id/nav_travellers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/travellers" />
    </group>
    <item
        android:id="@+id/account"
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/my_account" />
            <item
                android:id="@+id/nav_wallet"
                android:icon="@drawable/ic_account_balance_wallet_black_24dp"
                android:title="@string/wallet" />
        </menu>
    </item>


</menu>
