<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_shipments">

    <fragment
        android:id="@+id/nav_shipments"
        android:name="com.movetto.activities.ui.shipments.ShipmentsFragment"
        android:label="@string/shipments"
        tools:layout="@layout/fragment_shipments" />

    <fragment
        android:id="@+id/nav_travel"
        android:name="com.movetto.activities.ui.travel.TravelFragment"
        android:label="@string/travel"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_packages"
        android:name="com.movetto.activities.ui.packages.PackagesFragment"
        android:label="@string/packages"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_travellers"
        android:name="com.movetto.activities.ui.travellers.TravellersFragment"
        android:label="@string/travellers"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.movetto.activities.ui.wallet.WalletFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.movetto.activities.ui.account.AccountFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_send" />
</navigation>