<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_700"
    android:backgroundTint="@color/red_700"
    android:minWidth="375dp"
    android:minHeight="667dp"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/background_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:contentDescription="@string/movetto"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/welcome_image" />

    <Button
        android:id="@+id/button_welcome"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="24dp"
        android:alpha="1"
        android:backgroundTint="@color/green_900"
        android:fontFamily="@font/kulim_park_bold"
        android:shadowColor="@android:color/black"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/continued"
        android:textSize="20sp"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/comfortaa_bold"
        android:shadowColor="@android:color/black"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/bienvenido_a_movetto"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_subtitle"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:fontFamily="@font/kulim_park_light"
        android:shadowColor="@android:color/black"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/reg_strate_o_inicia_sesi_n_con_tu_email"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_title" />

    <TextView
        android:id="@+id/email_privacy"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kulim_park_light"
        android:labelFor="@id/email_field"
        android:shadowColor="@android:color/black"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/si_continuas_aceptar_s_nuestra_pol_tica_de_privacidad_y_las_condiciones_de_uso_general"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:alpha=".5"
        android:autofillHints=""
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/red_50"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/introduce_un_email_v_lido"
        android:ems="10"
        android:fontFamily="@font/kulim_park_regular"
        android:inputType="textPersonName|textEmailAddress"
        android:labelFor="@id/email_privacy"
        android:text="@string/introduce_tu_email"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_subtitle"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>