<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_movetto_round" />

    <TextView
        android:id="@+id/user_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kulim_park_semibold"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Movetto.Body1"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nav_header_subtitle"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.Movetto.Caption"
        android:textColor="?attr/textColorAlertDialogListItem"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/user_display_name" />

</androidx.constraintlayout.widget.ConstraintLayout>