<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/account_partner_empty_img"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/fui_min_height_target"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/package_land_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_partner_register_colored" />

    <TextView
        android:id="@+id/account_partner_empty_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/kulim_park_bold"
        android:text="@string/account_manage_partner"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Movetto.Headline5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_partner_empty_img" />

    <View
        android:id="@+id/account_partner_empty_top_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_partner_empty_title" />

    <TextView
        android:id="@+id/account_partner_empty_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/account_partner_empty_subtitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Movetto.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_partner_empty_top_divider" />

    <View
        android:id="@+id/account_partner_empty_below_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_partner_empty_subtitle" />

    <Button
        android:id="@+id/account_partner_empty_create_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/kulim_park_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_up_partner"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_partner_empty_below_divider" />

    <Button
        android:id="@+id/account_partner_empty_back_button"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/kulim_park_bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/later"
        android:textColorLink="@color/color_on_secondary"
        android:textSize="18sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_partner_empty_create_button" />

</androidx.constraintlayout.widget.ConstraintLayout>